--- a/index.html
+++ b/index.html
@@ -12,8 +12,26 @@
 
 <body>
 
+    <div class="header">header</div>
+
+    <div class="nav">nav</div>
+
+    <div class="section">section <br>
+
+        <div id="article">article
+
+            <div id="h1"><strong>h1, h2, h3</strong></div>
+
+            <div id="p">p</div>
+
+        </div>
+
+    </div>
 
 
+    <div class="aside">aside</div>
+
+    <div class="footer">footer</div>
 
 
 
