--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="nav">nav</div>
 
-    <div class="section">section <br>
+    <div class="section">section
 
         <div id="article">article
 
